--- a/client/basics/src/index.css
+++ b/client/basics/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #171717;
+  background-image: url('./res/background.jpg');
+
 }
 
 code {
