--- a/client/basics/src/App.css
+++ b/client/basics/src/App.css
@@ -1,7 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
 .App{
-    
+    overflow: auto;
+    font-family: 'Concert One', cursive;
+}
+
+.AppHeader{
+    animation: scroll 70s linear infinite;
+    background: url("https://images.unsplash.com/photo-1465146633011-14f8e0781093?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3450&q=80"), #111111;
+
 }
 
 .kontain{
-    height: 50vh;
+    height: 100vh;
+    background-image: url('./res/background.jpg');
+    color: #7C83FD;
+    font-family: 'Roboto Mono', monospace;
+}
+
+.kontain h1{
+    float: left;
+    padding: 5rem;
+}
+
+.kontain h3{
+    float: right;
+}
+
+
+.show{
+    height: auto;
+    padding-top: 100px;
+    padding-bottom: 300px;
+}
+
+.show2{
+    height: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.show2 h1{
+    font-family: 'Roboto Mono', monospace;
+    font-size: 50px;
+    padding-bottom: 50px;
+
+}
+
+@keyframes scroll {
+   100%{
+    background-position:0px -3000px;
+  }
+}
+
+@media (prefers-reduced-motion) {
+  .AppHeader {
+    animation: scroll 200s linear infinite;
+  }
 }
